--- a/Codes/1.Pre_process_data.ipynb
+++ b/Codes/1.Pre_process_data.ipynb
@@ -5166,7 +5166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5206,7 +5206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -5238,6 +5238,8 @@
     }
    ],
    "source": [
+    "\n",
+    "\n",
     "# Leer cada archivo y almacenar los datos en un diccionario\n",
     "data_frames_indep = {}\n",
     "\n",
@@ -5736,6 +5738,241 @@
     "\n",
     "data_frame_combinado_indep"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exportar todos los datos de las variables dependientes (indeg como outdeg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Archivo ../DataIn/VarDep/23_Var.Dep_Rede_EntreajudaLabur.xlsx leído exitosamente con sufijo Rede_EntreajudaLabur.\n",
+      "Archivo ../DataIn/VarDep/24_Var.Dep_RedeControlExtAusencia.xlsx leído exitosamente con sufijo Var.Dep_RedeControlExtAusencia.\n",
+      "Archivo ../DataIn/VarDep/25_Var.Dep_ApoioSpecDiqCint.xlsx leído exitosamente con sufijo Var.Dep_ApoioSpecDiqCint.\n",
+      "Archivo ../DataIn/VarDep/26_Var.Dep_ApoioSpecTubos.xlsx leído exitosamente con sufijo Var.Dep_ApoioSpecTubos.\n",
+      "Archivo ../DataIn/VarDep/29_Var.Dep_RedApoiLevntDiCin.xlsx leído exitosamente con sufijo Var.Dep_RedApoiLevntDiCin.\n",
+      "Archivo ../DataIn/VarDep/32_Var.Dep_RedCont_DiqPriqDiqCint.xlsx leído exitosamente con sufijo RedCont_DiqPriqDiqCint.\n",
+      "Archivo ../DataIn/VarDep/35_Var.Dep_RedeRepar_DiqPriqDiqCint.xlsx leído exitosamente con sufijo RedeRepar_DiqPriqDiqCint.\n",
+      "Archivo ../DataIn/VarDep/36_Var.Dep_Red-Val_Cont1Rep2DiqCin.xlsx leído exitosamente con sufijo Red-Val_Cont1Rep2DiqCin.\n",
+      "Archivo ../DataIn/VarDep/37_Var.Dep_Red-Val_Cont1Rep2DiqPrq.xlsx leído exitosamente con sufijo Red-Val_Cont1Rep2DiqPrq.\n",
+      "Archivo ../DataIn/VarDep/38_Var.Dep_Red-Val_ContRep2_DiqPrqCin.xlsx leído exitosamente con sufijo ContRep2_DiqPrqCin.\n",
+      "Archivo ../DataIn/VarDep/39_Var.Dep_RedePartilhaAgu.xlsx leído exitosamente con sufijo Var.Dep_RedePartilhaAgu.\n",
+      "Archivo combinado guardado exitosamente en ../DataIntermediate/combined_data_dep_variables_indeg_outdeg.csv.\n",
+      "Dimensiones del DataFrame resultante: (129, 22)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import os\n",
+    "import re\n",
+    "\n",
+    "# Diccionario de archivos Excel con sus respectivas hojas\n",
+    "file_sheet_dict = {\n",
+    "    \"../DataIn/VarDep/23_Var.Dep_Rede_EntreajudaLabur.xlsx\": \"HelpLabur_CentalitybByNodes\",\n",
+    "    \"../DataIn/VarDep/24_Var.Dep_RedeControlExtAusencia.xlsx\": \"ContrlExtAusenc_Trasp_Centr\",\n",
+    "    \"../DataIn/VarDep/25_Var.Dep_ApoioSpecDiqCint.xlsx\": \"ApoiSpecDiqCint_Transp_Centr\",\n",
+    "    \"../DataIn/VarDep/26_Var.Dep_ApoioSpecTubos.xlsx\": \"ApoioSpecTubos_Transp_Centr\",\n",
+    "    \"../DataIn/VarDep/29_Var.Dep_RedApoiLevntDiCin.xlsx\": \"ApoioLevantDiqCin_Transp_Centr\",\n",
+    "    \"../DataIn/VarDep/32_Var.Dep_RedCont_DiqPriqDiqCint.xlsx\": \"ControlDiqPriqCint_trans_Centr\",\n",
+    "    \"../DataIn/VarDep/35_Var.Dep_RedeRepar_DiqPriqDiqCint.xlsx\": \"ReparDiqPriqCint_trans_Centr\",\n",
+    "    \"../DataIn/VarDep/36_Var.Dep_Red-Val_Cont1Rep2DiqCin.xlsx\": \"DiqCintCont1Rep2_trans_Centr\",\n",
+    "    \"../DataIn/VarDep/37_Var.Dep_Red-Val_Cont1Rep2DiqPrq.xlsx\": \"DiqPriqContr1Rep2_trans_Centr\",\n",
+    "    \"../DataIn/VarDep/38_Var.Dep_Red-Val_ContRep2_DiqPrqCin.xlsx\": \"ContRepDiqPriqCint_trans_Centr\",\n",
+    "    \"../DataIn/VarDep/39_Var.Dep_RedePartilhaAgu.xlsx\": \"RedePartilhaAgua_CentrbByNodes\",\n",
+    "}\n",
+    "\n",
+    "# Función para generar un sufijo corto basado en el nombre del archivo\n",
+    "def generate_short_suffix(file_name):\n",
+    "    base_name = os.path.splitext(os.path.basename(file_name))[0]\n",
+    "    parts = base_name.split('_')\n",
+    "    # Usar las últimas dos partes del nombre como sufijo\n",
+    "    return '_'.join(parts[-2:])\n",
+    "\n",
+    "# Leer cada archivo y almacenar los datos en un diccionario\n",
+    "data_frames = {}\n",
+    "\n",
+    "for file, sheet_name in file_sheet_dict.items():\n",
+    "    try:\n",
+    "        # Leer la hoja especificada\n",
+    "        df = pd.read_excel(file, sheet_name=sheet_name)\n",
+    "        \n",
+    "        # Seleccionar solo las columnas que contienen 'Indeg', 'OutDeg', 'Degree', o 'id'\n",
+    "        cols_to_keep = [col for col in df.columns if re.fullmatch(r'Indeg|OutDeg|Degree|id', col)]\n",
+    "        df = df[cols_to_keep]\n",
+    "        \n",
+    "        # Generar un sufijo corto basado en el nombre del archivo\n",
+    "        suffix = generate_short_suffix(file)\n",
+    "        \n",
+    "        # Añadir sufijo a las columnas\n",
+    "        df = df.add_suffix(f'_{suffix}')\n",
+    "        \n",
+    "        # Renombrar columna id para tener un nombre consistente\n",
+    "        df = df.rename(columns={f'id_{suffix}': 'id'})\n",
+    "        \n",
+    "        data_frames[suffix] = df\n",
+    "        print(f\"Archivo {file} leído exitosamente con sufijo {suffix}.\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error al leer el archivo {file}: {e}\")\n",
+    "\n",
+    "# Inicializar el DataFrame resultante con el primer DataFrame en el diccionario\n",
+    "result_df = None\n",
+    "\n",
+    "for suffix, df in data_frames.items():\n",
+    "    if result_df is None:\n",
+    "        result_df = df\n",
+    "    else:\n",
+    "        result_df = pd.merge(result_df, df, on='id', how='outer')\n",
+    "\n",
+    "# Guardar el DataFrame resultante en un archivo Excel\n",
+    "output_path = \"../DataIntermediate/combined_data_dep_variables_indeg_outdeg.csv\"\n",
+    "os.makedirs(\"../DataIntermediate/\", exist_ok=True)\n",
+    "try:\n",
+    "    # Eliminar la fila con el nombre del productor 'Sumfone Tagadad'\n",
+    "    result_df = result_df[result_df['id'] != 'Sumfone Tagadad']\n",
+    "    result_df.to_csv(output_path, index=False)\n",
+    "    print(f\"Archivo combinado guardado exitosamente en {output_path}.\")\n",
+    "    print(f\"Dimensiones del DataFrame resultante: {result_df.shape}\")\n",
+    "except Exception as e:\n",
+    "    print(f\"Error al guardar el archivo combinado: {e}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exportar todos los datos de las variables independientes (indeg como outdeg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Archivo ../DataIn/VarExpl/0018_Rev_Var.Expl_RedConfliAguaTot.xlsx leído exitosamente con sufijo RedConfltAgu.\n",
+      "Archivo ../DataIn/VarExpl/0019.1_RevV.Expl_RedConfliAguaReso.xlsx leído exitosamente con sufijo RedConfliAgu.\n",
+      "Archivo ../DataIn/VarExpl/12_Var.Explic_FamiRedIrmonsPrimos.xlsx leído exitosamente con sufijo RedeIrmonsPr.\n",
+      "Archivo ../DataIn/VarExpl/13_Var.Explic_FamiRedPaiTiopatCriadr.xlsx leído exitosamente con sufijo PaiTiopaterC.\n",
+      "Archivo ../DataIn/VarExpl/14_Var.Explic_FamiRedTiosMaternos.xlsx leído exitosamente con sufijo TiosMaternos.\n",
+      "Archivo ../DataIn/VarExpl/15.1_V.Expl_Red_IntimAmigUndir.xlsx leído exitosamente con sufijo IntimAmigUnd.\n",
+      "Archivo ../DataIn/VarExpl/15_Var.Explic_Rede_IntimAmigos.xlsx leído exitosamente con sufijo IntimAmigos_.\n",
+      "Archivo ../DataIn/VarExpl/16_Var.Explic_RedeRisk.xlsx leído exitosamente con sufijo RedeRisk_Cen.\n",
+      "Archivo ../DataIn/VarExpl/17_Var.Explic_Rede_Confianca.xlsx leído exitosamente con sufijo RedeConfianc.\n",
+      "Archivo ../DataIn/VarExpl/19_Var.Explic_RedeConflitAguaPersist.xlsx leído exitosamente con sufijo RedeConflitA.\n",
+      "Archivo ../DataIn/VarExpl/20_RevVar.Expl_RedConflitGeralTot.xlsx leído exitosamente con sufijo RedeConflitG.\n",
+      "Archivo ../DataIn/VarExpl/21_Var.Explic_RedeConflitGeralPersist.xlsx leído exitosamente con sufijo RedeConflitG.\n",
+      "Archivo ../DataIn/VarExpl/Duda_22.1_Var.Explic_RedeVendaParcel.xlsx leído exitosamente con sufijo VendaParcela.\n",
+      "Archivo ../DataIn/VarExpl/Duda_22_Var.Explic_RedeEmprestParcel.xlsx leído exitosamente con sufijo EmprestParce.\n",
+      "Archivo ../DataIn/VarDep/Data_Superf_NumZonas.xlsx leído exitosamente con sufijo Data_area.\n",
+      "Archivo ../DataIntermediate/PCA_Dist_Prod.xlsx leído exitosamente con sufijo Distance_Pro.\n",
+      "Archivo ../DataIntermediate/Distancias_promedio_casas_parcelas.xlsx leído exitosamente con sufijo Dist_moranza.\n",
+      "Archivo ../DataIn/VarExpl/12-13-14_Var.Explic_FamiTotal.xlsx leído exitosamente con sufijo RedeTotFamil.\n",
+      "Archivo ../DataIn/VarExpl/Atributos_Productores.xlsx leído exitosamente.\n",
+      "Archivo combinado guardado exitosamente en ../DataIntermediate/combined_data_indep_variables_indeg_outdeg.csv.\n",
+      "Dimensiones del DataFrame resultante: (129, 37)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import os\n",
+    "import re\n",
+    "\n",
+    "# Diccionario de archivos Excel con sus respectivas hojas\n",
+    "file_sheet_dict_indep = {\n",
+    "    \"../DataIn/VarExpl/0018_Rev_Var.Expl_RedConfliAguaTot.xlsx\": \"RedConfltAguTot_CentlitybByNod\",\n",
+    "    \"../DataIn/VarExpl/0019.1_RevV.Expl_RedConfliAguaReso.xlsx\": \"RedConfliAguaRes_CentlitybByNod\",\n",
+    "    \"../DataIn/VarExpl/12_Var.Explic_FamiRedIrmonsPrimos.xlsx\": \"RedeIrmonsPrimo_CentlitybByNods\",\n",
+    "    \"../DataIn/VarExpl/13_Var.Explic_FamiRedPaiTiopatCriadr.xlsx\": \"PaiTiopaterCriador_Transp_Centr\",\n",
+    "    \"../DataIn/VarExpl/14_Var.Explic_FamiRedTiosMaternos.xlsx\": \"TiosMaternos_Transp_Centr\",\n",
+    "    \"../DataIn/VarExpl/15.1_V.Expl_Red_IntimAmigUndir.xlsx\": \"IntimAmigUndi_CentalitybByNodes\",\n",
+    "    \"../DataIn/VarExpl/15_Var.Explic_Rede_IntimAmigos.xlsx\": \"IntimAmigos_CentalitybByNodes\",\n",
+    "    \"../DataIn/VarExpl/16_Var.Explic_RedeRisk.xlsx\": \"RedeRisk_CentalitybByNodes\",\n",
+    "    \"../DataIn/VarExpl/17_Var.Explic_Rede_Confianca.xlsx\": \"RedeConfianca_CentalityByNodes\",\n",
+    "    \"../DataIn/VarExpl/19_Var.Explic_RedeConflitAguaPersist.xlsx\": \"RedeConflitAgua_CentlitybByNod\",\n",
+    "    \"../DataIn/VarExpl/20_RevVar.Expl_RedConflitGeralTot.xlsx\": \"RedeConflitGerTo_CentlitybByNod\",\n",
+    "    \"../DataIn/VarExpl/21_Var.Explic_RedeConflitGeralPersist.xlsx\": \"RedeConflitGerPe_CentlitybByNod\",\n",
+    "    \"../DataIn/VarExpl/Duda_22.1_Var.Explic_RedeVendaParcel.xlsx\": \"VendaParcela_Transp_Centr\",\n",
+    "    \"../DataIn/VarExpl/Duda_22_Var.Explic_RedeEmprestParcel.xlsx\": \"EmprestParcela_Centr\",\n",
+    "    \"../DataIn/VarDep/Data_Superf_NumZonas.xlsx\": \"Data_area\",\n",
+    "    \"../DataIntermediate/PCA_Dist_Prod.xlsx\" : \"Distance_Prods\",\n",
+    "    \"../DataIntermediate/Distancias_promedio_casas_parcelas.xlsx\" : \"Dist_moranza_parcel\",\n",
+    "    \"../DataIn/VarExpl/12-13-14_Var.Explic_FamiTotal.xlsx\": \"RedeTotFamily_CentlitybByNods\"\n",
+    "}\n",
+    "\n",
+    "# Leer cada archivo y almacenar los datos en un diccionario\n",
+    "data_frames_indep = {}\n",
+    "\n",
+    "for file, sheet_name in file_sheet_dict_indep.items():\n",
+    "    try:\n",
+    "        # Leer el archivo Excel\n",
+    "        df = pd.read_excel(file, sheet_name=sheet_name)\n",
+    "        \n",
+    "        # Seleccionar solo las columnas que contienen exactamente 'Indeg' o 'Deg' en el nombre\n",
+    "        cols_to_keep = [col for col in df.columns if re.fullmatch(r'Indeg|OutDeg|Degree|PC1|PC2|Avg_Distancia|id', col)]\n",
+    "        df = df[cols_to_keep]\n",
+    "        \n",
+    "        \n",
+    "        # Generar un sufijo corto basado en el nombre de la hoja\n",
+    "        suffix = sheet_name[:12]  # Usa los primeros 5 caracteres del nombre de la hoja como sufijo\n",
+    "        \n",
+    "        # Añadir sufijo a las columnas\n",
+    "        df = df.add_suffix(f'_{suffix}')\n",
+    "        \n",
+    "        # Renombrar columna id para tener un nombre consistente\n",
+    "        df = df.rename(columns={f'id_{suffix}': 'id'})\n",
+    "        \n",
+    "        data_frames_indep[suffix] = df\n",
+    "        print(f\"Archivo {file} leído exitosamente con sufijo {suffix}.\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error al leer el archivo {file}: {e}\")\n",
+    "\n",
+    "# Procesar el archivo \"Atributos_Productores.xlsx\"\n",
+    "atributos_productores_path = \"../DataIn/VarExpl/Atributos_Productores.xlsx\"\n",
+    "try:\n",
+    "    atributos_productores_df = pd.read_excel(atributos_productores_path, sheet_name=\"Sheet1\")\n",
+    "    print(f\"Archivo {atributos_productores_path} leído exitosamente.\")\n",
+    "except Exception as e:\n",
+    "    print(f\"Error al leer el archivo {atributos_productores_path}: {e}\")\n",
+    "\n",
+    "# Inicializar el DataFrame resultante con el primer DataFrame en el diccionario\n",
+    "result_df = None\n",
+    "\n",
+    "for suffix, df in data_frames_indep.items():\n",
+    "    if result_df is None:\n",
+    "        result_df = df\n",
+    "    else:\n",
+    "        result_df = pd.merge(result_df, df, on='id', how='outer')\n",
+    "\n",
+    "# Combinar el DataFrame resultante con el de \"Atributos_Productores\"\n",
+    "final_result_df = pd.merge(result_df, atributos_productores_df, on='id', how='outer')\n",
+    "\n",
+    "# Eliminar la fila con el nombre del productor 'Sumfone Tagadad'\n",
+    "final_result_df = final_result_df[final_result_df['id'] != 'Sumfone Tagadad']\n",
+    "\n",
+    "# Guardar el DataFrame resultante en un archivo CSV\n",
+    "output_path = \"../DataIntermediate/combined_data_indep_variables_indeg_outdeg.csv\"\n",
+    "os.makedirs(\"../DataIntermediate/\", exist_ok=True)\n",
+    "try:\n",
+    "    final_result_df.to_csv(output_path, index=False)\n",
+    "    print(f\"Archivo combinado guardado exitosamente en {output_path}.\")\n",
+    "    print(f\"Dimensiones del DataFrame resultante: {final_result_df.shape}\")\n",
+    "except Exception as e:\n",
+    "    print(f\"Error al guardar el archivo combinado: {e}\")"
+   ]
   }
  ],
  "metadata": {
@@ -5754,7 +5991,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
