--- a/Codes/4.DistanceMatriz.ipynb
+++ b/Codes/4.DistanceMatriz.ipynb
@@ -14050,6 +14050,38 @@
     }
    ],
    "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from geopy.distance import geodesic\n",
+    "\n",
+    "# Cargar el archivo Excel\n",
+    "file_path = '../DataIn/Centroides.xlsx'  \n",
+    "xls = pd.ExcelFile(file_path)\n",
+    "\n",
+    "# Cargar la hoja `matriz_de_distancia` en un DataFrame\n",
+    "df = pd.read_excel(xls, sheet_name='centroides_nome_atu')\n",
+    "\n",
+    "# Asumimos que el DataFrame contiene las columnas '0_Nome_atu', 'X', 'Y'\n",
+    "productores = df['0_Nome_atu'].unique()\n",
+    "\n",
+    "# Crear una lista para almacenar las distancias promedio entre parcelas de cada productor\n",
+    "dist_avg_per_productor = []\n",
+    "\n",
+    "# Calcular la distancia promedio entre parcelas de cada productor\n",
+    "for productor in productores:\n",
+    "    parcelas = df[df['0_Nome_atu'] == productor]\n",
+    "    coords = parcelas[['X', 'Y']].values\n",
+    "    dist_matrix = np.zeros((len(coords), len(coords)))\n",
+    "    \n",
+    "    for i in range(len(coords)):\n",
+    "        for j in range(len(coords)):\n",
+    "            if i != j:\n",
+    "                dist_matrix[i, j] = geodesic(coords[i], coords[j]).meters\n",
+    "                \n",
+    "    # Calcular la distancia promedio\n",
+    "    avg_distance = np.mean(dist_matrix[np.triu_indices(len(coords), k=1)])\n",
+    "    dist_avg_per_productor.append((productor, avg_distance))\n",
+    "\n",
     "# Convertir la lista en un DataFrame\n",
     "dist_avg_df = pd.DataFrame(dist_avg_per_productor, columns=['productor', 'avg_dist_within'])\n",
     "\n",
