--- a/Codes/5.RF_with_indeg_outdg.ipynb
+++ b/Codes/5.RF_with_indeg_outdg.ipynb
@@ -35,92 +35,263 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "               id  Degree_Rede_EntreajudaLabur  \\\n",
-      "0   Antonio Mbunh                           12   \n",
-      "1    Bulna Ntumba                           12   \n",
-      "2  Nghala Pungana                           12   \n",
-      "3      Samba Ndum                           12   \n",
-      "4    Tomas Isnaba                           12   \n",
-      "\n",
-      "   OutDeg_Var.Dep_RedeControlExtAusencia  \\\n",
-      "0                                      3   \n",
-      "1                                      1   \n",
-      "2                                      1   \n",
-      "3                                      3   \n",
-      "4                                      3   \n",
-      "\n",
-      "   Indeg_Var.Dep_RedeControlExtAusencia  OutDeg_Var.Dep_ApoioSpecDiqCint  \\\n",
-      "0                                     1                                4   \n",
-      "1                                     3                                0   \n",
-      "2                                     1                                1   \n",
-      "3                                     1                                2   \n",
-      "4                                     2                                8   \n",
-      "\n",
-      "   Indeg_Var.Dep_ApoioSpecDiqCint  OutDeg_Var.Dep_ApoioSpecTubos  \\\n",
-      "0                               2                              0   \n",
-      "1                               1                              0   \n",
-      "2                               1                              0   \n",
-      "3                               1                              1   \n",
-      "4                               2                              1   \n",
-      "\n",
-      "   Indeg_Var.Dep_ApoioSpecTubos  OutDeg_Var.Dep_RedApoiLevntDiCin  \\\n",
-      "0                             2                                 1   \n",
-      "1                             1                                 1   \n",
-      "2                             1                                 1   \n",
-      "3                             2                                 2   \n",
-      "4                             3                                 3   \n",
-      "\n",
-      "   Indeg_Var.Dep_RedApoiLevntDiCin  ...  OutDeg_RedeRepar_DiqPriqDiqCint  \\\n",
-      "0                                0  ...                                6   \n",
-      "1                                0  ...                                1   \n",
-      "2                                2  ...                                1   \n",
-      "3                                4  ...                                4   \n",
-      "4                                3  ...                                6   \n",
-      "\n",
-      "   Indeg_RedeRepar_DiqPriqDiqCint  OutDeg_Red-Val_Cont1Rep2DiqCin  \\\n",
-      "0                               2                              11   \n",
-      "1                               3                               2   \n",
-      "2                               1                               3   \n",
-      "3                               9                               6   \n",
-      "4                               4                              12   \n",
-      "\n",
-      "   Indeg_Red-Val_Cont1Rep2DiqCin  OutDeg_Red-Val_Cont1Rep2DiqPrq  \\\n",
-      "0                              0                              11   \n",
-      "1                              6                               3   \n",
-      "2                              2                               3   \n",
-      "3                             18                               7   \n",
-      "4                              5                              10   \n",
-      "\n",
-      "   Indeg_Red-Val_Cont1Rep2DiqPrq  OutDeg_ContRep2_DiqPrqCin  \\\n",
-      "0                              4                         14   \n",
-      "1                              7                          3   \n",
-      "2                              4                          4   \n",
-      "3                             18                          9   \n",
-      "4                              8                         15   \n",
-      "\n",
-      "   Indeg_ContRep2_DiqPrqCin  OutDeg_Var.Dep_RedePartilhaAgu  \\\n",
-      "0                         4                               0   \n",
-      "1                         7                               2   \n",
-      "2                         4                               0   \n",
-      "3                        18                               1   \n",
-      "4                         8                               0   \n",
-      "\n",
-      "   Indeg_Var.Dep_RedePartilhaAgu  \n",
-      "0                              0  \n",
-      "1                              0  \n",
-      "2                              0  \n",
-      "3                              0  \n",
-      "4                              1  \n",
-      "\n",
-      "[5 rows x 22 columns]\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>Degree_Rede_EntreajudaLabur</th>\n",
+       "      <th>OutDeg_Var.Dep_RedeControlExtAusencia</th>\n",
+       "      <th>Indeg_Var.Dep_RedeControlExtAusencia</th>\n",
+       "      <th>OutDeg_Var.Dep_ApoioSpecDiqCint</th>\n",
+       "      <th>Indeg_Var.Dep_ApoioSpecDiqCint</th>\n",
+       "      <th>OutDeg_Var.Dep_ApoioSpecTubos</th>\n",
+       "      <th>Indeg_Var.Dep_ApoioSpecTubos</th>\n",
+       "      <th>OutDeg_Var.Dep_RedApoiLevntDiCin</th>\n",
+       "      <th>Indeg_Var.Dep_RedApoiLevntDiCin</th>\n",
+       "      <th>...</th>\n",
+       "      <th>OutDeg_RedeRepar_DiqPriqDiqCint</th>\n",
+       "      <th>Indeg_RedeRepar_DiqPriqDiqCint</th>\n",
+       "      <th>OutDeg_Red-Val_Cont1Rep2DiqCin</th>\n",
+       "      <th>Indeg_Red-Val_Cont1Rep2DiqCin</th>\n",
+       "      <th>OutDeg_Red-Val_Cont1Rep2DiqPrq</th>\n",
+       "      <th>Indeg_Red-Val_Cont1Rep2DiqPrq</th>\n",
+       "      <th>OutDeg_ContRep2_DiqPrqCin</th>\n",
+       "      <th>Indeg_ContRep2_DiqPrqCin</th>\n",
+       "      <th>OutDeg_Var.Dep_RedePartilhaAgu</th>\n",
+       "      <th>Indeg_Var.Dep_RedePartilhaAgu</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Antonio Mbunh</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>11</td>\n",
+       "      <td>4</td>\n",
+       "      <td>14</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Bulna Ntumba</td>\n",
+       "      <td>12</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6</td>\n",
+       "      <td>3</td>\n",
+       "      <td>7</td>\n",
+       "      <td>3</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Nghala Pungana</td>\n",
+       "      <td>12</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Samba Ndum</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>9</td>\n",
+       "      <td>6</td>\n",
+       "      <td>18</td>\n",
+       "      <td>7</td>\n",
+       "      <td>18</td>\n",
+       "      <td>9</td>\n",
+       "      <td>18</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Tomas Isnaba</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6</td>\n",
+       "      <td>4</td>\n",
+       "      <td>12</td>\n",
+       "      <td>5</td>\n",
+       "      <td>10</td>\n",
+       "      <td>8</td>\n",
+       "      <td>15</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 22 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               id  Degree_Rede_EntreajudaLabur  \\\n",
+       "0   Antonio Mbunh                           12   \n",
+       "1    Bulna Ntumba                           12   \n",
+       "2  Nghala Pungana                           12   \n",
+       "3      Samba Ndum                           12   \n",
+       "4    Tomas Isnaba                           12   \n",
+       "\n",
+       "   OutDeg_Var.Dep_RedeControlExtAusencia  \\\n",
+       "0                                      3   \n",
+       "1                                      1   \n",
+       "2                                      1   \n",
+       "3                                      3   \n",
+       "4                                      3   \n",
+       "\n",
+       "   Indeg_Var.Dep_RedeControlExtAusencia  OutDeg_Var.Dep_ApoioSpecDiqCint  \\\n",
+       "0                                     1                                4   \n",
+       "1                                     3                                0   \n",
+       "2                                     1                                1   \n",
+       "3                                     1                                2   \n",
+       "4                                     2                                8   \n",
+       "\n",
+       "   Indeg_Var.Dep_ApoioSpecDiqCint  OutDeg_Var.Dep_ApoioSpecTubos  \\\n",
+       "0                               2                              0   \n",
+       "1                               1                              0   \n",
+       "2                               1                              0   \n",
+       "3                               1                              1   \n",
+       "4                               2                              1   \n",
+       "\n",
+       "   Indeg_Var.Dep_ApoioSpecTubos  OutDeg_Var.Dep_RedApoiLevntDiCin  \\\n",
+       "0                             2                                 1   \n",
+       "1                             1                                 1   \n",
+       "2                             1                                 1   \n",
+       "3                             2                                 2   \n",
+       "4                             3                                 3   \n",
+       "\n",
+       "   Indeg_Var.Dep_RedApoiLevntDiCin  ...  OutDeg_RedeRepar_DiqPriqDiqCint  \\\n",
+       "0                                0  ...                                6   \n",
+       "1                                0  ...                                1   \n",
+       "2                                2  ...                                1   \n",
+       "3                                4  ...                                4   \n",
+       "4                                3  ...                                6   \n",
+       "\n",
+       "   Indeg_RedeRepar_DiqPriqDiqCint  OutDeg_Red-Val_Cont1Rep2DiqCin  \\\n",
+       "0                               2                              11   \n",
+       "1                               3                               2   \n",
+       "2                               1                               3   \n",
+       "3                               9                               6   \n",
+       "4                               4                              12   \n",
+       "\n",
+       "   Indeg_Red-Val_Cont1Rep2DiqCin  OutDeg_Red-Val_Cont1Rep2DiqPrq  \\\n",
+       "0                              0                              11   \n",
+       "1                              6                               3   \n",
+       "2                              2                               3   \n",
+       "3                             18                               7   \n",
+       "4                              5                              10   \n",
+       "\n",
+       "   Indeg_Red-Val_Cont1Rep2DiqPrq  OutDeg_ContRep2_DiqPrqCin  \\\n",
+       "0                              4                         14   \n",
+       "1                              7                          3   \n",
+       "2                              4                          4   \n",
+       "3                             18                          9   \n",
+       "4                              8                         15   \n",
+       "\n",
+       "   Indeg_ContRep2_DiqPrqCin  OutDeg_Var.Dep_RedePartilhaAgu  \\\n",
+       "0                         4                               0   \n",
+       "1                         7                               2   \n",
+       "2                         4                               0   \n",
+       "3                        18                               1   \n",
+       "4                         8                               0   \n",
+       "\n",
+       "   Indeg_Var.Dep_RedePartilhaAgu  \n",
+       "0                              0  \n",
+       "1                              0  \n",
+       "2                              0  \n",
+       "3                              0  \n",
+       "4                              1  \n",
+       "\n",
+       "[5 rows x 22 columns]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -129,7 +300,7 @@
     "dep_variables_no_ceros = pd.read_csv('../DataIntermediate/combined_data_dep_variables_indeg_outdeg.csv', sep=',')\n",
     "\n",
     "# Vista previa de los datos cargados\n",
-    "print(dep_variables_no_ceros.head())"
+    "dep_variables_no_ceros.head()"
    ]
   },
   {
@@ -923,38 +1094,6 @@
    "source": [
     "# Mostrar las 10 interacciones más importantes\n",
     "interaction_importance_df.head(10)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Interpretación de los Resultados de importancia par la variable predicha de 'Degree_Rede_EntreajudaLabur':\n",
-    "\n",
-    "Primera Interacción (Avg_Distancia_Dist_moranza, 2_VarExp_Atri_Tab...):\n",
-    "\n",
-    "Importancia: 3.108262, lo que sugiere que esta interacción es la más importante en el conjunto analizado.\n",
-    "Dirección: 0.051459, indicando un efecto positivo leve; a medida que Avg_Distancia_Dist_moranza y 2_VarExp_Atri_Tab... aumentan, la predicción del modelo tiende a aumentar ligeramente.\n",
-    "Segunda Interacción (Avg_Distancia_Dist_moranza, 7_VarExp_Atri_Ind...):\n",
-    "\n",
-    "Importancia: 2.981712, también bastante significativa.\n",
-    "Dirección: 0.051853, similar a la primera, un efecto positivo leve.\n",
-    "Tercera Interacción (Indeg_VendaParcela, Avg_Distancia_Dist_moranza):\n",
-    "\n",
-    "Importancia: 2.929915.\n",
-    "Dirección: 0.121224, un efecto positivo más pronunciado en comparación con las dos primeras interacciones.\n",
-    "Cuarta Interacción (Avg_Distancia_Dist_moranza, 10_VarExp_Atri_Me...):\n",
-    "\n",
-    "Importancia: 2.901908.\n",
-    "Dirección: 0.049161, efecto positivo leve.\n",
-    "Quinta Interacción (Indeg_RedeRisk_Cen, Avg_Distancia_Dist_moranza):\n",
-    "\n",
-    "Importancia: 2.897929.\n",
-    "Dirección: -0.017938, efecto negativo leve, indicando que un aumento en Indeg_RedeRisk_Cen y Avg_Distancia_Dist_moranza tiende a disminuir la predicción del modelo.\n",
-    "Conclusiones:\n",
-    "Variables con mayor interacción: Avg_Distancia_Dist_moranza parece interactuar significativamente con varias otras variables, lo que sugiere que su influencia combinada con otras variables es importante en la predicción del modelo.\n",
-    "Direcciones variadas: La mayoría de las interacciones tienen una dirección positiva, pero algunas, como la interacción entre Indeg_RedeRisk_Cen y Avg_Distancia_Dist_moranza, tienen una dirección negativa, indicando diferentes efectos combinados en la predicción del modelo.\n",
-    "Importancia relativa: Las interacciones con valores de importancia más altos deben ser consideradas cuidadosamente al interpretar el comportamiento del modelo, ya que tienen un mayor impacto en las predicciones."
    ]
   },
   {
